--- a/config.json
+++ b/config.json
@@ -11,37 +11,37 @@
     ],
     "permissions": [
         "redcap_every_page_top",
-		"redcap_data_entry_form"
+        "redcap_data_entry_form"
     ],
     "project-settings": [
-		{
+        {
             "key": "hide-save-next-record",
             "name": "Hide 'Save & Go To Next Record' on forms?",
             "required": false,
             "type": "checkbox"
         },
-		{
-			"key": "hide-repeat-vars-group",
-			"name": "Hide Repeat on Reports",
-			"required": false,
-			"type": "sub_settings",
-			"repeatable": false,
-			"sub_settings":[
-				{
-					"key": "hide-repeat-vars",
-					"name": "Hide 'redcap_repeat_instrument' and 'redcap_repeat_instance' on reports?",
-					"required": false,
-					"type": "checkbox"
-				},
-				{
-					"key": "report-id-list",
-					"name": "Report IDs (comma seperated)",
-					"required": false,
-					"type": "text",
-					"default": ""
-				}
-			]
-		}
+        {
+            "key": "hide-repeat-vars-group",
+            "name": "Hide Repeat on Reports",
+            "required": false,
+            "type": "sub_settings",
+            "repeatable": false,
+            "sub_settings":[
+                {
+                    "key": "hide-repeat-vars",
+                    "name": "Hide 'redcap_repeat_instrument', 'redcap_repeat_instance', 'redcap_event_name' on reports?",
+                    "required": false,
+                    "type": "checkbox"
+                },
+                {
+                    "key": "report-id-list",
+                    "name": "Report IDs (comma seperated)",
+                    "required": false,
+                    "type": "text",
+                    "default": ""
+                }
+            ]
+        }
     ],
     "compatibility": {
         "redcap-version-min": "8.0.3"
