added new features to pprevent dag record renaming and data entry toggle of readonly

--- a/config.json
+++ b/config.json
@@ -91,6 +91,11 @@
             "type": "checkbox"
         },
         {
+            "key": "stop-dag-rename",
+            "name": "Use incremental record ID when DAGs enabled",
+            "type": "checkbox"
+        },
+        {
             "key": "toggle-tweaks-end",
             "name": "tableEnd",
             "type": "descriptive"
