added option to disable feature ported to new em

--- a/config.json
+++ b/config.json
@@ -41,6 +41,11 @@
             "type": "descriptive"
         },
         {
+            "key": "disable-em",
+            "name": "Disable features being ported to another EM",
+            "type": "checkbox"
+        },
+        {
             "key": "support-12-hour-input",
             "name": "Add 12 hour validation to time fields",
             "type": "checkbox"
